# pybind11_numpy

./: .gitignore  CMakeLists.txt  README.md
.github/: compiler_setup.py
.github/workflows/: cmake.yml
src/: mdspan_interface.cpp  numpy_interface.cpp
test/: test_pybind11_mdspan.py  test_pybind11_numpy.py
